refactor: integrate mappers using MapStruct